# linux-notify-app

./: .clang-format  .gitignore  README.md  build.bash  setup.bash
src/: CMakeLists.txt
src/cmake/: FindLibNotify.cmake
src/main/: CMakeLists.txt  main.cpp
src/notification/: CMakeLists.txt  NotificationAdapter.cpp  NotificationManager.cpp  notification_manager.cpp
src/notification/public/: NotificationAdapter.h  NotificationManager.h  notification_manager.h
src/os_adapter/: CMakeLists.txt  Thread.cpp
src/os_adapter/public/: Thread.h
src/version/: CMakeLists.txt
